feat: make create user not return pointers
